--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,19 +2,15 @@ name: test
 
 on:
   push:
-  create:
   pull_request:
-  schedule:
-    - cron: '44 4 * * SAT'
-  workflow_dispatch:
 
 jobs:
   test-node:
-    runs-on: Ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node: [ '14' ]
-        typescript: [ '4.1', '4.2', '4.3', '4.4' ]
+        typescript: [ '4.1', '4.2', '4.3', '4.4', '4.5', '4.6' ]
     name: Test with TypeScript ${{ matrix.typescript }} on Node ${{ matrix.node }}
     steps:
       - uses: actions/checkout@v2
@@ -27,7 +23,7 @@ jobs:
       - run: yarn test
 
   test-deno:
-    runs-on: Ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         deno: [ "v1.x" ]
@@ -50,7 +46,7 @@ jobs:
         working-directory: ./deno/lib
 
   lint:
-    runs-on: Ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node: [ '14' ]
