--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "inference"
   ],
   "scripts": {
-    "check:format": "prettier --check \"src/**/*.ts\" \"deno/lib/**/*.ts\"",
-    "fix:format": "prettier --write \"src/**/*.ts\" \"deno/lib/**/*.ts\"",
-    "check:lint": "eslint --ext .ts ./src",
-    "fix:lint": "eslint --fix --ext .ts ./src",
-    "check": "yarn check:lint && yarn check:format",
-    "fix": "yarn fix:lint && yarn fix:format",
+    "prettier:check": "prettier --check \"src/**/*.ts\" \"deno/lib/**/*.ts\"",
+    "prettier:fix": "prettier --write \"src/**/*.ts\" \"deno/lib/**/*.ts\"",
+    "lint:check": "eslint --ext .ts ./src",
+    "lint:fix": "eslint --fix --ext .ts ./src",
+    "check": "yarn lint:check && yarn prettier:check",
+    "fix": "yarn lint:fix && yarn prettier:fix",
     "clean": "rm -rf lib/* deno/lib/*",
     "build": "yarn run clean && npm run build:cjs && npm run build:esm && npm run build:deno",
     "build:deno": "node ./deno/build.mjs",
@@ -89,18 +89,18 @@
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.6.2"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && yarn build:deno && git add .",
-      "pre-push": "lint-staged && yarn build && yarn test && yarn badge"
+      "pre-commit": "lint-staged",
+      "pre-push": "lint-staged"
     }
   },
   "lint-staged": {
     "*.ts": [
-      "yarn fix:lint",
-      "yarn fix:format"
+      "yarn lint:fix",
+      "yarn prettier:fix"
     ]
   }
 }
