--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "inference"
   ],
   "scripts": {
-    "prettier:check": "prettier --check \"src/**/*.ts\" \"deno/lib/**/*.ts\"",
-    "prettier:fix": "prettier --write \"src/**/*.ts\" \"deno/lib/**/*.ts\"",
+    "prettier:check": "prettier --check src/**/*.ts deno/lib/**/*.ts --no-error-on-unmatched-pattern",
+    "prettier:fix": "prettier --write src/**/*.ts deno/lib/**/*.ts --no-error-on-unmatched-pattern",
     "lint:check": "eslint --ext .ts ./src",
     "lint:fix": "eslint --fix --ext .ts ./src",
     "check": "yarn lint:check && yarn prettier:check",
