--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "module": "./lib/index.mjs",
+  "dependencies": {},
   "exports": {
     ".": {
       "require": "./lib/index.js",
@@ -67,8 +68,8 @@
     "@types/benchmark": "^2.1.0",
     "@types/jest": "^26.0.17",
     "@types/node": "^14.14.10",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
     "benchmark": "^2.1.4",
     "dependency-cruiser": "^9.19.0",
     "eslint": "^7.15.0",
