--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
       - "master"
-      - "ci"
+      # - "ci"
     # paths:
     #   - package.json
 
@@ -47,7 +47,7 @@ jobs:
         uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
-          dry-run: true
+          dry-run: false
 
       - name: Post-publish
         if: steps.publish.outputs.type != 'none'
@@ -88,5 +88,5 @@ jobs:
           release_name: v${{ steps.publish.outputs.version }}
           commitish: ${{ github.ref }}
           body: ${{steps.github_release.outputs.changelog}}
-          draft: true
+          draft: false
           prerelease: false
