Improve precommit hooks

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,9 +5,8 @@ on:
   push:
     branches:
       - "master"
-      # - "ci"
-    # paths:
-    #   - package.json
+    paths:
+      - package.json
 
 jobs:
   build_and_publish:
@@ -27,20 +26,10 @@ jobs:
         run: |
           yarn install
       
-      - name: Build, lint, format
+      - name: Build 
         run: |
           yarn clean
-          yarn lint:fix
-          yarn prettier:fix
           yarn build
-
-      - name: Commit and push
-        run: |
-          git add .
-          git config --global user.name 'ZodBot'
-          git config --global user.email 'bot@zodlabs.com'
-          git commit -am "chore: Format, lint, build Deno"
-          git push
 
       - id: publish
         name: Publish to NPM
