--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -5,10 +5,7 @@
     "outDir": "lib",
     "declaration": true,
     "declarationMap": false,
-    "sourceMap": false,
+    "sourceMap": false
   },
-  "exclude": [
-    "./src/**/__tests__",
-    "./src/playground.ts"
-  ]
+  "exclude": ["./src/**/__tests__", "./src/playground.ts"]
 }
