--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ '14' ]
-        typescript: [ '4.1', '4.2', '4.3', '4.4', '4.5', '4.6' ]
+        node: ["14"]
+        typescript: ["4.1", "4.2", "4.3", "4.4", "4.5", "4.6"]
     name: Test with TypeScript ${{ matrix.typescript }} on Node ${{ matrix.node }}
     steps:
       - uses: actions/checkout@v2
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        deno: [ "v1.x" ]
+        deno: ["v1.x"]
     name: Test with Deno ${{ matrix.deno }}
     steps:
       - uses: actions/checkout@v2
@@ -58,7 +58,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ '14' ]
+        node: ["14"]
     name: Lint on Node ${{ matrix.node }}
     steps:
       - uses: actions/checkout@v2
