--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,12 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "es5",
-      "es6",
-      "es7",
-      "esnext",
-      "dom"
-    ],
+    "lib": ["es5", "es6", "es7", "esnext", "dom"],
     "target": "es2018",
     "removeComments": false,
     "esModuleInterop": true,
@@ -22,8 +16,5 @@
     "downlevelIteration": true,
     "isolatedModules": true
   },
-  "include": [
-    "./src/**/*",
-    "./.eslintrc.js"
-  ]
+  "include": ["./src/**/*", "./.eslintrc.js"]
 }
