--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -5,10 +5,7 @@
     // "outDir": "./lib/esm",
     "declaration": false,
     "declarationMap": false,
-    "sourceMap": false,
+    "sourceMap": false
   },
-  "exclude": [
-    "./src/**/__tests__",
-    "./src/playground.ts"
-  ]
+  "exclude": ["./src/**/__tests__", "./src/playground.ts"]
 }
