--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,6 +1,12 @@
 {
   "compilerOptions": {
-    "lib": ["es5", "es6", "es7", "esnext", "dom"],
+    "lib": [
+      "es5",
+      "es6",
+      "es7",
+      "esnext",
+      "dom"
+    ],
     "target": "es2018",
     "removeComments": false,
     "esModuleInterop": true,
@@ -16,5 +22,8 @@
     "downlevelIteration": true,
     "isolatedModules": true
   },
-  "include": ["./src/**/*", "./.eslintrc.js"]
+  "include": [
+    "./src/**/*",
+    "./.eslintrc.js"
+  ]
 }
