--- a/tsconfig.types.json
+++ b/tsconfig.types.json
@@ -6,5 +6,8 @@
     "declarationMap": true,
     "emitDeclarationOnly": true
   },
-  "exclude": ["./src/**/__tests__", "./src/playground.ts"]
+  "exclude": [
+    "./src/**/__tests__",
+    "./src/playground.ts"
+  ]
 }
