--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zod",
-  "version": "3.14.4",
+  "version": "3.14.5",
   "description": "TypeScript-first schema declaration and validation library with static type inference",
   "main": "./lib/index.js",
   "types": "./index.d.ts",
@@ -87,6 +87,7 @@
     "pretty-quick": "^3.1.3",
     "rollup": "^2.70.1",
     "ts-jest": "^27.1.3",
+    "ts-morph": "^14.0.0",
     "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
