--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "ts-morph": "^14.0.0",
     "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.2"
+    "typescript": "4.1"
   },
   "lint-staged": {
     "src/*.ts": [
