--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,11 @@
 # .github/release.yml
 
-name: release
+name: Release on npm
 on:
   push:
     branches:
       - "master"
+      - "main"
     paths:
       - package.json
 
@@ -21,6 +22,13 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
+      
+      - name: Checkout zod-deno
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: colinhacks/zod-deno
+          path: deno/lib
 
       - name: Install dependencies
         run: |
@@ -48,6 +56,14 @@ jobs:
         run: |
           echo "Version in package.json has not changed. Skipping."
           exit 0
+
+      - name: Push to deno
+        if: steps.publish.outputs.type != 'none'     
+        working-directory: deno/lib/
+        run: |
+          git add . -f
+          git commit -m "Build from zod $GITHUB_SHA"
+          git push
 
       - name: Configure changelog
         if: steps.publish.outputs.type != 'none'
@@ -82,3 +98,18 @@ jobs:
           body: ${{steps.github_release.outputs.changelog}}
           draft: false
           prerelease: false
+
+      - name: Create release
+        if: steps.publish.outputs.type != 'none'
+        id: create_release
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ steps.publish.outputs.version }}
+          release_name: v${{ steps.publish.outputs.version }}
+          commitish: ${{ github.ref }}
+          body: ${{steps.github_release.outputs.changelog}}
+          draft: false
+          prerelease: false
+          repo: colinhacks/zod-deno
