--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -1,6 +1,6 @@
 # .github/release.yml
 
-name: Release on npm
+name: Push to deno
 on:
   push:
     branches:
@@ -40,6 +40,8 @@ jobs:
       - name: Push to deno
         working-directory: deno/lib/
         run: |
+          git config --global user.email "zodbot@colinhacks.com"
+          git config --global user.name "Zod Bot"
           git add . -f
           git commit -m "Build from zod $GITHUB_SHA"
           git push
