--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zod",
   "version": "3.17.4",
-  "description": "TypeScript-first schema declaration and validation library with static type inference.",
+  "description": "TypeScript-first schema declaration and validation library with static type inference",
   "main": "./lib/index.js",
   "types": "./index.d.ts",
   "module": "./lib/index.mjs",
