--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,12 +60,12 @@ jobs:
 
       - name: Push to Deno
         if: steps.publish.outputs.type != 'none'
-        working-directory: deno/lib/
+        working-directory: deno/lib
         run: |
           git config --global user.email "zodbot@colinhacks.com"
           git config --global user.name "Zod Bot"
           git add . -f
-          git commit -m "Build from zod $GITHUB_SHA"
+          git commit -m "Build from zod $GITHUB_SHA" --allow-empty
           git push
 
       - name: Configure changelog
