--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "test": "jest --coverage",
     "test:deno": "cd deno && deno test",
     "prepublishOnly": "npm run test && npm run build && npm run build:deno",
-    "play": "nodemon -e ts -w . -x esr src/playground.ts",
+    "play": "nodemon -e ts -w . -x tsx src/playground.ts",
     "depcruise": "depcruise -c .dependency-cruiser.js src",
     "benchmark": "esr src/benchmarks/index.ts",
     "prepare": "husky install"
@@ -73,8 +73,6 @@
     "@typescript-eslint/parser": "^5.15.0",
     "benchmark": "^2.1.4",
     "dependency-cruiser": "^9.19.0",
-    "esbuild": "^0.14.49",
-    "esbuild-runner": "^2.2.1",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-ban": "^1.6.0",
@@ -91,6 +89,7 @@
     "ts-jest": "^27.1.3",
     "ts-morph": "^14.0.0",
     "tslib": "^2.3.1",
+    "tsx": "^3.8.0",
     "typescript": "4.1"
   },
   "lint-staged": {
