--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "test": "jest --coverage",
     "test:deno": "cd deno && deno test",
     "prepublishOnly": "npm run test && npm run build && npm run build:deno",
-    "play": "nodemon -e ts -w . -x tsx src/playground.ts",
+    "play": "nodemon -e ts -w . -x tsx playground.ts",
     "depcruise": "depcruise -c .dependency-cruiser.js src",
     "benchmark": "tsx src/benchmarks/index.ts",
     "prepare": "husky install"
@@ -68,7 +68,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/benchmark": "^2.1.0",
-    "@types/jest": "^26.0.17",
+    "@types/jest": "^29.2.2",
     "@types/node": "14",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
@@ -81,13 +81,13 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
-    "jest": "^27.5.1",
+    "jest": "^29.3.1",
     "lint-staged": "^12.3.7",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.0",
     "pretty-quick": "^3.1.3",
     "rollup": "^2.70.1",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^29.0.3",
     "ts-morph": "^14.0.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.1",
