--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "build": "yarn run clean && npm run build:cjs && npm run build:esm && npm run build:deno",
     "build:deno": "node ./deno/build.mjs && cp ./README.md ./deno/lib",
     "build:esm": "rollup --config rollup.config.js",
-    "build:cjs": "tsc --p tsconfig.cjs.json",
-    "build:types": "tsc --p tsconfig.types.json",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:types": "tsc -p tsconfig.types.json",
     "rollup": "rollup --config rollup.config.js",
     "test": "jest --coverage",
     "test:deno": "cd deno && deno test",
@@ -92,7 +92,7 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.3.1",
     "tsx": "^3.8.0",
-    "typescript": "4.1"
+    "typescript": "4.2"
   },
   "lint-staged": {
     "src/*.ts": [
