Make stalebot a bit more chill

--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -1,10 +1,10 @@
 # Number of days of inactivity before an issue becomes stale
-daysUntilStale: 60
+daysUntilStale: 90
 # Number of days of inactivity before a stale issue is closed
-daysUntilClose: 7
+daysUntilClose: 30
 # Issues with these labels will never be considered stale
-# exemptLabels:
-#   - pinned
+exemptLabels:
+  - enhancement
 #   - security
 # Label to use when marking an issue as stale
 staleLabel: stale
