update homepage link in package.json

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "bugs": {
     "url": "https://github.com/colinhacks/zod/issues"
   },
-  "homepage": "https://github.com/colinhacks/zod",
+  "homepage": "https://zod.dev",
   "funding": "https://github.com/sponsors/colinhacks",
   "support": {
     "backing": {
