--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.3.1",
     "tsx": "^3.8.0",
-    "typescript": "4.5"
+    "typescript": "~4.5.0"
   },
   "lint-staged": {
     "src/*.ts": [
