--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -38,5 +38,5 @@ jobs:
         uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
-          dry-run: true
+          dry-run: false
           tag: canary
