--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -5,7 +5,8 @@
     "outDir": "lib",
     "declaration": true,
     "declarationMap": false,
-    "sourceMap": false
+    "sourceMap": false,
+    "removeComments": true
   },
   "exclude": [
     "./src/**/__tests__",
