chore: move `exports.types` field to first spot @ package.json. (#2443)
* chore: move exports.types field to first spot @ package.json.

* remove comma.

--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
   },
   "exports": {
     ".": {
+      "types": "./index.d.ts",
       "require": "./lib/index.js",
-      "import": "./lib/index.mjs",
-      "types": "./index.d.ts"
+      "import": "./lib/index.mjs"
     },
     "./package.json": "./package.json",
     "./locales/*": "./lib/locales/*"
