--- a/ts-jest.config.json
+++ b/ts-jest.config.json
@@ -1,5 +1,8 @@
 {
   "rootDir": ".",
+  "transform": {
+    "^.+\\.tsx?$": "ts-jest"
+  },
   "testRegex": "src/.*\\.test\\.ts$",
   "modulePathIgnorePatterns": ["language-server"],
   "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
