--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
   "main": "./lib/index.js",
   "module": "./lib/index.mjs",
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@rollup/plugin-typescript": "^8.2.0",
+    "@swc/core": "^1.3.66",
+    "@swc/jest": "^0.2.26",
     "@types/benchmark": "^2.1.0",
     "@types/jest": "^29.2.2",
     "@types/node": "14",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
+    "babel-jest": "^29.5.0",
     "benchmark": "^2.1.4",
     "dependency-cruiser": "^9.19.0",
     "eslint": "^8.11.0",
@@ -30,7 +36,7 @@
     "prettier": "^2.6.0",
     "pretty-quick": "^3.1.3",
     "rollup": "^2.70.1",
-    "ts-jest": "^29.0.3",
+    "ts-jest": "^29.1.0",
     "ts-morph": "^14.0.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.1",
@@ -82,14 +88,18 @@
     "fix": "yarn lint:fix && yarn prettier:fix",
     "clean": "rm -rf lib/* deno/lib/*",
     "build": "yarn run clean && npm run build:cjs && npm run build:esm && npm run build:deno",
-    "build:deno": "node ./deno/build.mjs && cp ./README.md ./deno/lib",
+    "build:deno": "node ./deno-build.mjs && cp ./README.md ./deno/lib",
     "build:esm": "rollup --config rollup.config.js",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:types": "tsc -p tsconfig.types.json",
     "build:test": "tsc -p tsconfig.test.json",
     "rollup": "rollup --config rollup.config.js",
     "test:watch": "jest --watch",
-    "test": "jest --coverage",
+    "test": "yarn test:tsc",
+    "test:babel": "jest --coverage",
+    "test:bun": "bun test",
+    "test:tsc": "jest --config ./ts-jest.config.json",
+    "test:swc": "jest --config ./swc-jest.config.json",
     "test:deno": "cd deno && deno test",
     "prepublishOnly": "npm run test && npm run build && npm run build:deno",
     "play": "nodemon -e ts -w . -x tsx playground.ts",
