--- a/swc-jest.config.json
+++ b/swc-jest.config.json
@@ -1,5 +1,8 @@
 {
   "rootDir": ".",
+  "transform": {
+    "^.+\\.(t|j)sx?$": "@swc/jest"
+  },
   "testRegex": "src/.*\\.test\\.ts$",
   "modulePathIgnorePatterns": ["language-server"],
   "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
