Update test runners

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,7 +1,7 @@
 {
   "rootDir": ".",
   "testRegex": "src/.*\\.test\\.ts$",
-  "modulePathIgnorePatterns": ["language-server"],
+  "modulePathIgnorePatterns": ["language-server", "__vitest__"],
   "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
   "coverageReporters": ["json-summary", "text", "lcov"]
 }
