--- a/swc-jest.config.json
+++ b/swc-jest.config.json
@@ -4,7 +4,7 @@
     "^.+\\.(t|j)sx?$": "@swc/jest"
   },
   "testRegex": "src/.*\\.test\\.ts$",
-  "modulePathIgnorePatterns": ["language-server"],
+  "modulePathIgnorePatterns": ["language-server", "__vitest__"],
   "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
   "coverageReporters": ["json-summary", "text", "lcov"]
 }
