Clean up configs

--- a/configs/jest.config.json
+++ b/configs/jest.config.json
@@ -1,5 +1,8 @@
 {
-  "rootDir": ".",
+  "rootDir": "..",
+  "transform": {
+    "^.+\\.tsx?$": "ts-jest"
+  },
   "testRegex": "src/.*\\.test\\.ts$",
   "modulePathIgnorePatterns": ["language-server", "__vitest__"],
   "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
