--- a/package.json
+++ b/package.json
@@ -90,18 +90,17 @@
     "clean": "rm -rf lib/* deno/lib/*",
     "build": "yarn run clean && npm run build:cjs && npm run build:esm && npm run build:deno",
     "build:deno": "node ./deno-build.mjs && cp ./README.md ./deno/lib",
-    "build:esm": "rollup --config rollup.config.js",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:types": "tsc -p tsconfig.types.json",
-    "build:test": "tsc -p tsconfig.test.json",
-    "rollup": "rollup --config rollup.config.js",
-    "test:watch": "jest --watch",
+    "build:esm": "rollup --config ./configs/rollup.config.js",
+    "build:cjs": "tsc -p ./configs/tsconfig.cjs.json",
+    "build:types": "tsc -p ./configs/tsconfig.types.json",
+    "build:test": "tsc -p ./configs/tsconfig.test.json",
+    "test:watch": "yarn test:ts-jest --watch",
     "test": "yarn test:ts-jest",
-    "test:babel": "jest --coverage",
+    "test:babel": "jest --coverage --config ./configs/babel-jest.config.json",
     "test:bun": "bun test",
-    "test:vitest": "npx vitest --no-isolate",
-    "test:ts-jest": "npx jest --config ./ts-jest.config.json",
-    "test:swc": "npx jest --config ./swc-jest.config.json",
+    "test:vitest": "npx vitest --config ./configs/vitest.config.ts",
+    "test:ts-jest": "npx jest --config ./configs/ts-jest.config.json",
+    "test:swc": "npx jest --config ./configs/swc-jest.config.json",
     "test:deno": "cd deno && deno test",
     "prepublishOnly": "npm run test && npm run build && npm run build:deno",
     "play": "nodemon -e ts -w . -x tsx playground.ts",
