--- a/configs/ts-jest.config.json
+++ b/configs/ts-jest.config.json
@@ -3,7 +3,7 @@
   "transform": {
     "^.+\\.tsx?$": "ts-jest"
   },
-  "testRegex": "src/.*\\.test\\.ts$",
+  "testRegex": "__tests__/.*\\.test\\.ts$",
   "modulePathIgnorePatterns": ["language-server", "__vitest__"],
   "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
   "coverageReporters": ["json-summary", "text", "lcov"]
