--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "./configs/tsconfig.base.json"
+  "extends": "./configs/tsconfig.base.json",
+  "compilerOptions": {
+    "outDir": "../lib"
+  }
 }
