--- a/configs/tsconfig.cjs.json
+++ b/configs/tsconfig.cjs.json
@@ -5,8 +5,7 @@
     "outDir": "../lib",
     "declaration": true,
     "declarationMap": false,
-    "sourceMap": false,
-    "removeComments": true
+    "sourceMap": false
   },
   "exclude": ["../src/**/__tests__", "../playground.ts"]
 }
