--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ["18"]
-        typescript: ["4.5", "4.6", "4.7", "4.8", "4.9", "5.0"]
+        node: ["18", "20"]
+        typescript: ["4.5", "4.6", "4.7", "4.8", "4.9", "5.0", "5.3"]
     name: Test with TypeScript ${{ matrix.typescript }} on Node ${{ matrix.node }}
     steps:
       - uses: actions/checkout@v2
