--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.3.1",
     "tsx": "^3.8.0",
-    "typescript": "~4.5.0",
+    "typescript": "~5.4.2",
     "vitest": "^0.32.2"
   },
   "exports": {
@@ -114,6 +114,5 @@
       "npm-funding": true
     }
   },
-  "types": "./index.d.ts",
-  "dependencies": {}
+  "types": "./index.d.ts"
 }
