--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@jest/globals": "^29.4.3",
     "@rollup/plugin-typescript": "^8.2.0",
     "@swc/core": "^1.3.66",
     "@swc/jest": "^0.2.26",
