[POC] [runtime performance] bottom up lazy issues/paths construction (#3487)
* wip

* INVALID -> ZodFailure, fix input issue

* Add new benchmarks

* Switch away from Ok<T> wrapper

* ZodString optimizations

* playground.mts

* Remove ZodString opt, update benchmarks

* Detect promises in parsing instead of using ctx.async

* Fix tests

* Switch benchmarks to tinybench

* Update benchmarks

* Updates

---------

Co-authored-by: Colin McDonnell <colinmcd94@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,10 @@ coverage
 .vscode
 .idea
 *.log
-playground.ts
-deno/lib/playground.ts
+playground.mts
+deno/lib/playground.mts
 .eslintcache
 workspace.code-workspace
 .netlify
 bun.lockb
+out.png
