--- a/configs/tsconfig.types.json
+++ b/configs/tsconfig.types.json
@@ -6,5 +6,5 @@
     "declarationMap": true,
     "emitDeclarationOnly": true
   },
-  "exclude": ["../src/**/__tests__", "../src/playground.ts"]
+  "exclude": ["../src/**/__tests__", "../src/playground.mts"]
 }
