--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "@rollup/plugin-typescript": "^8.2.0",
     "@swc/core": "^1.3.66",
     "@swc/jest": "^0.2.26",
-    "@types/benchmark": "^2.1.0",
     "@types/jest": "^29.2.2",
-    "@types/node": "14",
+    "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "@web-std/file": "^3.0.3",
     "babel-jest": "^29.5.0",
-    "benchmark": "^2.1.4",
+    "console-table-printer": "^2.12.0",
     "dependency-cruiser": "^9.19.0",
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^8.5.0",
@@ -38,13 +37,15 @@
     "prettier": "^2.6.0",
     "pretty-quick": "^3.1.3",
     "rollup": "^2.70.1",
+    "tinybench": "^2.8.0",
     "ts-jest": "^29.1.0",
     "ts-morph": "^14.0.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.1",
-    "tsx": "^3.8.0",
+    "tsx": "^4.10.2",
     "typescript": "~5.0.0",
-    "vitest": "^0.32.2"
+    "vitest": "^0.32.2",
+    "zod": "^3.23.8"
   },
   "exports": {
     ".": {
@@ -105,9 +106,9 @@
     "test:swc": "npx jest --config ./configs/swc-jest.config.json",
     "test:deno": "cd deno && deno test",
     "prepublishOnly": "npm run test && npm run build && npm run build:deno",
-    "play": "nodemon -e ts -w . -x tsx playground.ts",
+    "play": "nodemon -e ts,mts -w . -x tsx playground.mts",
     "depcruise": "depcruise -c .dependency-cruiser.js src",
-    "benchmark": "tsx src/benchmarks/index.ts",
+    "bench": "tsx src/benchmarks/index.mts",
     "prepare": "husky install"
   },
   "sideEffects": false,
