--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@rollup/plugin-typescript": "^8.2.0",
     "@swc/core": "^1.3.66",
     "@swc/jest": "^0.2.26",
+    "@types/benchmark": "^2.1.5",
     "@types/jest": "^29.2.2",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "@web-std/file": "^3.0.3",
     "babel-jest": "^29.5.0",
+    "benchmark": "^2.1.4",
     "console-table-printer": "^2.12.0",
     "dependency-cruiser": "^9.19.0",
     "eslint": "^9.2.0",
@@ -33,6 +35,7 @@
     "husky": "^7.0.4",
     "jest": "^29.3.1",
     "lint-staged": "^12.3.7",
+    "mitata": "^0.1.11",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.0",
     "pretty-quick": "^3.1.3",
@@ -117,5 +120,8 @@
       "npm-funding": true
     }
   },
-  "types": "./index.d.ts"
+  "types": "./index.d.ts",
+  "dependencies": {
+    "cronometro": "^3.0.2"
+  }
 }
