--- a/configs/tsconfig.base.json
+++ b/configs/tsconfig.base.json
@@ -19,7 +19,7 @@
   "include": [
     "../src/**/*",
     "../experiments/**/*",
-    "../playground.mts",
+    "../playground.ts",
     "../.eslintrc.js"
   ]
 }
