--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "test:swc": "npx jest --config ./configs/swc-jest.config.json",
     "test:deno": "cd deno && deno test",
     "prepublishOnly": "npm run test && npm run build && npm run build:deno",
-    "play": "nodemon -e ts,mts -w . -x tsx playground.mts",
+    "play": "nodemon -e ts,mts -w . -x tsx playground.ts",
     "depcruise": "depcruise -c .dependency-cruiser.js src",
     "bench": "tsx src/benchmarks/index.mts",
     "prepare": "husky install"
