--- a/plugin/effect/configs/tsconfig.base.json
+++ b/plugin/effect/configs/tsconfig.base.json
@@ -17,5 +17,5 @@
     "downlevelIteration": true,
     "isolatedModules": true
   },
-  "include": ["../src/**/*", "../playground.mts"]
+  "include": ["../src/**/*", "../playground.ts"]
 }
