--- a/configs/tsconfig.esm.json
+++ b/configs/tsconfig.esm.json
@@ -7,5 +7,5 @@
     "declarationMap": false,
     "sourceMap": false
   },
-  "exclude": ["../src/**/__tests__", "../src/playground.mts"]
+  "exclude": ["../src/**/__tests__", "../src/playground.ts"]
 }
