--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -4,7 +4,7 @@ name: Release on npm (canary)
 on:
   push:
     branches:
-      - "master"
+      - "main"
     paths:
       - "src/**"
       - ".github/workflows/release-canary.yml"
