--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,10 +3,10 @@ name: test
 on:
   push:
     branches:
-      - "master"
+      - "main"
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   test-node:
